# Pakunoda-MCP

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  release_checklist_v0.1.0.md  release_notes_v0.1.0.md
src/pakunoda_mcp/: __init__.py  reader.py  runner.py  server.py
src/pakunoda_mcp/adapters/: __init__.py  candidates.py  project.py  search.py
tests/: conftest.py  test_adapters.py  test_reader.py  test_runner.py  test_server.py  test_smoke.py
